--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "multer": "^1.4.2",
         "nodemon": "^2.0.2",
         "pg": "^7.11.0",
         "socket.io": "^2.3.0",
