--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "nodemon": "^2.0.2",
         "pg": "^7.11.0",
         "socket.io": "^2.3.0",
-        "winston": "3.1.0"
+        "winston": "3.1.0",
+        "winston-daily-rotate-file": "^4.4.2"
     },
     "engines": {
         "node": "10.15.2"
