--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "Erik Mangor",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "multer": "^1.4.2",
@@ -23,7 +24,7 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "DEBUG=socket.io:* nodemon app.js"
     },
     "devDependencies": {
         "chai": "^4.2.0",
