--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "description": "example of nodejs/express/postgres project",
     "version": "1.0.5",
     "author": "Erik Mangor",
+    "main": "app.js",
+    "browser": "./dist/index.html",
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "eslint": "^6.8.0",
         "express": "^4.17.1",
+        "jest": "^25.3.0",
+        "jsdoc": "^3.6.4",
         "multer": "^1.4.2",
         "nodemon": "^2.0.2",
+        "parcel": "^1.12.4",
         "pg": "^7.11.0",
         "socket.io": "^2.3.0",
         "winston": "3.1.0",
@@ -24,15 +30,17 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "DEBUG=socket.io:* nodemon app.js",
-        "test": "mocha"
+       "start": "nodemon app.js"
     },
     "devDependencies": {
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
         "grunt": "^1.0.4",
+        "grunt-browser-sync": "^2.2.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-mocha-test": "^0.13.3",
+        "gulp": "^4.0.2",
+        "gulp-nodemon": "^2.5.0",
         "mocha": "^7.1.0",
         "request": "^2.88.2",
         "supertest": "^4.0.2"
