--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "filepond": "^4.13.4",
+    "filepond-plugin-file-validate-size": "^2.2.1",
+    "filepond-plugin-file-validate-type": "^1.2.5",
+    "filepond-plugin-image-exif-orientation": "^1.0.7",
+    "filepond-plugin-image-preview": "^4.6.1",
+    "filepond-plugin-image-resize": "^2.0.4",
+    "filepond-plugin-image-transform": "^3.7.2",
+    "mapbox-gl": "^1.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-filepond": "^7.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "use-position": "0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
