--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "socket.io-client": "^2.3.0",
-    "use-position": "0.0.6"
+    "use-position": "0.0.6",
+    "use-socket.io-client": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
