--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "app.js",
     "browser": "./dist/index.html",
     "dependencies": {
+        "babel": "^6.23.0",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
@@ -30,9 +31,14 @@
     },
     "license": "MIT",
     "scripts": {
-       "start": "nodemon app.js"
+        "start": "nodemon app.js"
     },
     "devDependencies": {
+        "@babel/cli": "^7.8.4",
+        "@babel/core": "^7.9.0",
+        "@babel/node": "^7.8.7",
+        "@babel/preset-env": "^7.9.5",
+        "babel-cli": "^6.26.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
         "grunt": "^1.0.4",
