--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "express": "^4.17.1",
+        "express-minify": "^1.0.0",
         "jest": "^25.3.0",
         "jsdoc": "^3.6.4",
         "multer": "^1.4.2",
@@ -20,7 +21,8 @@
         "pg": "^7.11.0",
         "socket.io": "^2.3.0",
         "winston": "3.1.0",
-        "winston-daily-rotate-file": "^4.4.2"
+        "winston-daily-rotate-file": "^4.4.2",
+        "zerorpc": "^0.9.8"
     },
     "engines": {
         "node": "10.15.2"
@@ -31,7 +33,8 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "debug": "nodemon --inspect app.js"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
