--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     },
     "license": "MIT",
     "scripts": {
-        "start": "pm2 start app.js"
+        "start": "nodemon app.js", 
+        "deploy": "pm2 start app.js"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
