--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jest": "^25.3.0",
         "jsdoc": "^3.6.4",
         "multer": "^1.4.2",
+        "node-geocoder": "^3.27.0",
         "nodemailer": "^6.4.6",
         "nodemon": "^2.0.2",
         "parcel": "^1.12.4",
