--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "boilerplate-nodejs-express-postgres",
-    "description": "example of nodejs/express/postgres project",
-    "version": "1.0.5",
-    "author": "Erik Mangor",
+    "name": "slimebikeapp",
+    "description": "Misplaced Wheels App",
+    "version": "1.0.0",
+    "author": "Chintan Pathak, Borna Arabkhedri, Don MacKenzie",
     "main": "app.js",
     "browser": "./dist/index.html",
     "dependencies": {
@@ -22,8 +22,11 @@
         "nodemon": "^2.0.2",
         "parcel": "^1.12.4",
         "pg": "^7.11.0",
+        "pm2": "^4.4.0",
         "socket.io": "^2.3.0",
         "winston": "3.1.0",
+        "winston-aws-cloudwatch": "^3.0.0",
+        "winston-cloudwatch": "^2.3.2",
         "winston-daily-rotate-file": "^4.4.2"
     },
     "engines": {
@@ -31,7 +34,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/emangor/boilerplate-nodejs-express-postgres.git"
+        "url": "https://github.com/BornaKhedri/slimebikeapp.git"
     },
     "license": "MIT",
     "scripts": {
